HTML without angluarjs

--- a/java/frontend/web/EShop/pages/home.html
+++ b/java/frontend/web/EShop/pages/home.html
@@ -19,10 +19,10 @@
 	<nav class="bar">
 	
 		<ul class="ulbar">
-		  <li><a href="#">Products</a></li>
-		  <li><a href="#">Shop cart</a></li>
-		  <li><a href="#">Contact</a></li>
-		  <li><a href="#">statistics</a></li>
+		  <li><a href="home.html">Products</a></li>
+		  <li><a href="shopcart.html">Shop cart</a></li>
+		  <li><a href="contactus.html">Contact us</a></li>
+		  <li><a href="statistics.html">statistics</a></li>
 		</ul>
 	
 	</nav>
